Double values now explicitly used for parsed visibility tokens